--- a/.github/workflows/build-test-pack-publish.yml
+++ b/.github/workflows/build-test-pack-publish.yml
@@ -13,114 +13,113 @@ on:
     branches:
       - "*"
 
-env:
-  IS_MAIN_PR: |
-    ${{
+jobs:
+  # build:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Fetch unshallow
+  #       run: git fetch --prune --tags --unshallow
+  #     - name: Setup .NET
+  #       uses: actions/setup-dotnet@v1
+  #       with:
+  #         dotnet-version: "5.0.x"
+  #     - name: Restore dependencies
+  #       run: dotnet restore
+  #     - name: Build projects
+  #       run: dotnet build --configuration Release --no-restore
+  #     - name: Test projects
+  #       run: dotnet test
+  #     - name: Pack projects
+  #       run: dotnet pack --no-restore
+  #     - name: Upload packages (artifacts)
+  #       uses: actions/upload-artifact@v2
+  #       with:
+  #         name: nuget-packages
+  #         path: |
+  #           src/**/*.nupkg
+  #           src/**/*.snupkg
+  # publish:
+  #   env:
+  #     IS_MAIN_PR: false
+  #   runs-on: windows-latest
+  #   needs: build
+  #   if: |
+  #     (
+  #       github.ref == 'main'
+  #       && github.event_name == 'pull_request'
+  #       && github.event.pull_request.merged == true
+  #     ) ||
+  #     (
+  #       (
+  #         (
+  #           github.ref == 'refs/heads/develop'
+  #           && github.event_name == 'push'
+  #         ) ||
+  #         (
+  #           github.ref == 'develop'
+  #           && github.event_name == 'pull_request'
+  #           && github.event.pull_request.merged == true
+  #           && !startsWith(github.base_ref, 'release/')
+  #         )
+  #       ) &&
+  #         (
+  #           contains(toJSON(github.event.commits.*.message), 'feat: ')
+  #           || contains(toJSON(github.event.commits.*.message), 'fix: ')
+  #           || contains(toJSON(github.event.commits.*.message), 'perf: ')
+  #         )
+  #     )
+  #   steps:
+  #     - name: Download package artifacts
+  #       id: download-artifacts
+  #       uses: actions/download-artifact@v2
+  #       continue-on-error: true
+  #     - name: Push nupkg's
+  #       id: push-nupkg
+  #       if: ${{ steps.download-artifacts.outcome == 'success' }}
+  #       run: echo "::set-output name=CONSOLE::$(dotnet nuget push '**/*.nupkg' --source 'https://api.nuget.org/v3/index.json' --api-key ${{secrets.NUGET_API_KEY}} --skip-duplicate)"
+  #       continue-on-error: true
+  #     - name: Push nupkg's console output
+  #       if: steps.push-nupkg.outcome != 'skipped'
+  #       run: echo "${{steps.push-nupkg.outputs.CONSOLE}}"
+  #     - name: Push nupkg's suceeded
+  #       if: "${{ steps.push-nupkg.outcome == 'failure' && !contains(steps.push-nupkg.outputs.CONSOLE, 'error: File does not exist') }}"
+  #       run: exit 1
+  #     - name: Push snupkg's
+  #       id: push-snupkg
+  #       if: ${{ steps.download-artifacts.outcome == 'success' }}
+  #       run: echo "::set-output name=CONSOLE::$(dotnet nuget push '**/*.snupkg' --source 'https://api.nuget.org/v3/index.json' --api-key ${{secrets.NUGET_API_KEY}} --skip-duplicate)"
+  #       continue-on-error: true
+  #     - name: Push snupkg's console output
+  #       if: steps.push-snupkg.outcome != 'skipped'
+  #       run: echo "${{steps.push-snupkg.outputs.CONSOLE}}"
+  #     - name: Push snupkg's suceeded
+  #       if: "${{ steps.push-snupkg.outcome == 'failure' && !contains(steps.push-snupkg.outputs.CONSOLE, 'error: File does not exist') }}"
+  #       run: exit 1
+  synchronize:
+    runs-on: ubuntu-latest
+    # needs: publish
+    if: |
       (
         github.ref == 'main'
         && github.event_name == 'pull_request'
         && github.event.pull_request.merged == true
       )
-    }}
-
-      #  - name: Create Pull Request
-      #   uses: peter-evans/create-pull-request@v3
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Fetch unshallow
-        run: git fetch --prune --tags --unshallow
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: "5.0.x"
-      - name: Restore dependencies
-        run: dotnet restore
-      - name: Build projects
-        run: dotnet build --configuration Release --no-restore
-      - name: Test projects
-        run: dotnet test
-      - name: Pack projects
-        run: dotnet pack --no-restore
-      - name: Upload packages (artifacts)
-        uses: actions/upload-artifact@v2
-        with:
-          name: nuget-packages
-          path: |
-            src/**/*.nupkg
-            src/**/*.snupkg
-  publish:
-    needs: build
-    if: |
-      env.IS_MAIN_PR ||
-      (
-        (
-          (
-            github.ref == 'refs/heads/develop'
-            && github.event_name == 'push'
-          ) ||
-          (
-            github.ref == 'develop'
-            && github.event_name == 'pull_request'
-            && github.event.pull_request.merged == true
-            && !startsWith(github.base_ref, 'release/')
-          )
-        ) &&
-          (
-            contains(toJSON(github.event.commits.*.message), 'feat: ')
-            || contains(toJSON(github.event.commits.*.message), 'fix: ')
-            || contains(toJSON(github.event.commits.*.message), 'perf: ')
-          )
-      )
-    runs-on: windows-latest
-    steps:
-      - name: Download package artifacts
-        id: download-artifacts
-        uses: actions/download-artifact@v2
-        continue-on-error: true
-      - name: Push nupkg's
-        id: push-nupkg
-        if: ${{ steps.download-artifacts.outcome == 'success' }}
-        run: echo "::set-output name=CONSOLE::$(dotnet nuget push '**/*.nupkg' --source 'https://api.nuget.org/v3/index.json' --api-key ${{secrets.NUGET_API_KEY}} --skip-duplicate)"
-        continue-on-error: true
-      - name: Push nupkg's console output
-        if: steps.push-nupkg.outcome != 'skipped'
-        run: echo "${{steps.push-nupkg.outputs.CONSOLE}}"
-      - name: Push nupkg's suceeded
-        if: "${{ steps.push-nupkg.outcome == 'failure' && !contains(steps.push-nupkg.outputs.CONSOLE, 'error: File does not exist') }}"
-        run: exit 1
-      - name: Push snupkg's
-        id: push-snupkg
-        if: ${{ steps.download-artifacts.outcome == 'success' }}
-        run: echo "::set-output name=CONSOLE::$(dotnet nuget push '**/*.snupkg' --source 'https://api.nuget.org/v3/index.json' --api-key ${{secrets.NUGET_API_KEY}} --skip-duplicate)"
-        continue-on-error: true
-      - name: Push snupkg's console output
-        if: steps.push-snupkg.outcome != 'skipped'
-        run: echo "${{steps.push-snupkg.outputs.CONSOLE}}"
-      - name: Push snupkg's suceeded
-        if: "${{ steps.push-snupkg.outcome == 'failure' && !contains(steps.push-snupkg.outputs.CONSOLE, 'error: File does not exist') }}"
-        run: exit 1
-  synchronize:
-    runs-on: ubuntu-latest
-    needs: publish
-    if: env.IS_MAIN_PR
-    steps:
-      - name: Checkout the latest code
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+        run: git fetch --prune --unshallow
       - name: Create pull request
-        id: release-sync-pr
-        uses: peter-evans/create-pull-request@v3
+        uses: repo-sync/pull-request@v2
+        id: sync-pr
         with:
-          branch: feature/${{ github.head_ref }}
-          base: develop
-          delete-branch: true
-      - name: Automatic rebase
-        uses: cirrus-actions/rebase@1.4
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PR_NUMBER: ${{ steps.release-sync-pr.outputs.pull-request-number }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          destination_branch: "develop"
+          pr_title: "Rebase release from ${{ github.ref }} into develop"
+          pr_body: "refactor: rebased release from ${{ github.ref }} into develop"
+      - name: Rebase pull request
+        if: success()
+        uses: Teroneko-NET-Tools/action-auto-rebase@v2
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          pr_number: ${{ steps.sync-pr.outputs.pr_number }}
