--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,7 +1,10 @@
 mode: ContinuousDeployment
 continuous-delivery-fallback-tag: ""
 next-version: 1.0.0
-branches: {}
+branches:
+  feature:
+    source-branches:
+      - develop
 ignore:
   sha: []
 merge-message-formats: {}
