--- a/.github/workflows/build-test-pack-publish.yml
+++ b/.github/workflows/build-test-pack-publish.yml
@@ -13,6 +13,19 @@ on:
     branches:
       - "*"
 
+env:
+  IS_MAIN_PR: |
+    ${{
+      (
+        github.ref == 'main'
+        && github.event_name == 'pull_request'
+        && github.event.pull_request.merged == true
+      )
+    }}
+
+      #  - name: Create Pull Request
+      #   uses: peter-evans/create-pull-request@v3
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -40,12 +53,9 @@ jobs:
             src/**/*.nupkg
             src/**/*.snupkg
   publish:
+    needs: build
     if: |
-      (
-        github.ref == 'main'
-        && github.event_name == 'pull_request'
-        && github.event.pull_request.merged == true
-      ) ||
+      env.IS_MAIN_PR ||
       (
         (
           (
@@ -65,7 +75,6 @@ jobs:
             || contains(toJSON(github.event.commits.*.message), 'perf: ')
           )
       )
-    needs: build
     runs-on: windows-latest
     steps:
       - name: Download package artifacts
@@ -94,3 +103,24 @@ jobs:
       - name: Push snupkg's suceeded
         if: "${{ steps.push-snupkg.outcome == 'failure' && !contains(steps.push-snupkg.outputs.CONSOLE, 'error: File does not exist') }}"
         run: exit 1
+  synchronize:
+    runs-on: ubuntu-latest
+    needs: publish
+    if: env.IS_MAIN_PR
+    steps:
+      - name: Checkout the latest code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Create pull request
+        id: release-sync-pr
+        uses: peter-evans/create-pull-request@v3
+        with:
+          branch: feature/${{ github.head_ref }}
+          base: develop
+          delete-branch: true
+      - name: Automatic rebase
+        uses: cirrus-actions/rebase@1.4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PR_NUMBER: ${{ steps.release-sync-pr.outputs.pull-request-number }}
