--- a/.github/workflows/build-test-pack-publish.yml
+++ b/.github/workflows/build-test-pack-publish.yml
@@ -13,19 +13,6 @@ on:
     branches:
       - "*"
 
-env:
-  IS_MAIN_PR: |
-    ${{
-      (
-        github.ref == 'main'
-        && github.event_name == 'pull_request'
-        && github.event.pull_request.merged == true
-      )
-    }}
-
-      #  - name: Create Pull Request
-      #   uses: peter-evans/create-pull-request@v3
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -53,9 +40,16 @@ jobs:
             src/**/*.nupkg
             src/**/*.snupkg
   publish:
+    env:
+      IS_MAIN_PR: false
+    runs-on: windows-latest
     needs: build
     if: |
-      env.IS_MAIN_PR ||
+      (
+        github.ref == 'main'
+        && github.event_name == 'pull_request'
+        && github.event.pull_request.merged == true
+      ) ||
       (
         (
           (
@@ -75,7 +69,6 @@ jobs:
             || contains(toJSON(github.event.commits.*.message), 'perf: ')
           )
       )
-    runs-on: windows-latest
     steps:
       - name: Download package artifacts
         id: download-artifacts
@@ -106,7 +99,12 @@ jobs:
   synchronize:
     runs-on: ubuntu-latest
     needs: publish
-    if: env.IS_MAIN_PR
+    if: |
+      (
+        github.ref == 'main'
+        && github.event_name == 'pull_request'
+        && github.event.pull_request.merged == true
+      )
     steps:
       - name: Checkout the latest code
         uses: actions/checkout@v2
