ci: fetch repository unshallowed

--- a/.github/workflows/build-test-pack-publish.yml
+++ b/.github/workflows/build-test-pack-publish.yml
@@ -107,8 +107,6 @@ jobs:
       )
     steps:
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
       - name: Create pull request
         uses: repo-sync/pull-request@v2
         id: sync-pr
@@ -117,6 +115,8 @@ jobs:
           destination_branch: "develop"
           pr_title: "Rebase release from ${{ github.ref }} into develop"
           pr_body: "refactor: rebased release from ${{ github.ref }} into develop"
+      - name: Fetch unshallow
+        run: git fetch --prune --unshallow
       - name: Rebase pull request
         if: success()
         uses: Teroneko-NET-Tools/action-auto-rebase@v2-alpha.3
